objects/EUR_ISP_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>EUR_ISP_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Date_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Record__c</fullName>
        <label>Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Log (EU)</label>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ISP_DE_Error_Log</fullName>
        <active>true</active>
        <label>DE Error Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend_Error_Log</fullName>
        <active>true</active>
        <label>iSpend Error Log</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>